--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "spinners-react": "^1.0.4",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
